test/conformance/chainsaw/policy-validation/cluster-policy/background-subresource/policy-3.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: deny
spec:
  background: true
  rules:
    - name: deny
      match:
        any:
          - resources:
              kinds:
                - Pod/*
      validate:
        failureAction: Audit
        deny: {}
