test/conformance/chainsaw/policy-validation/cluster-policy/background-subresource/01-policy.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  creationTimestamp: null
  name: policy
spec:
  timeouts: {}
  try:
  - apply:
      check:
        (error != null): true
      file: policy-1.yaml
