test/conformance/chainsaw/policy-validation/cluster-policy/background-subresource/05-policy.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: TestStep
metadata:
  name: policy-5
spec:
  try:
  - apply:
      check:
        (error != null): true
      file: policy-5.yaml
