test/conformance/chainsaw/policy-validation/cluster-policy/background-subresource/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: background-subresource
spec:
  concurrent: true
  steps:
  - name: step-01
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-1.yaml
  - name: step-02
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-2.yaml
  - name: step-03
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-3.yaml
  - name: step-04
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-4.yaml
  - name: step-05
    try:
    - apply:
        expect:
        - check:
            ($error != null): true
        file: policy-5.yaml
